Overlay z-index and positioning fixes

--- a/src/Popover/style/index.styl
+++ b/src/Popover/style/index.styl
@@ -3,3 +3,9 @@
 @import '@spectrum/spectrum-css/dist/components/popover/multiStops/lightest.css';
 @import '@spectrum/spectrum-css/dist/components/popover/multiStops/dark.css';
 @import '@spectrum/spectrum-css/dist/components/popover/multiStops/darkest.css';
+
+.spectrum-Popover {
+  .spectrum-Dialog-content {
+    max-height: initial;
+  }
+}
